<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".LiveViewFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/talk_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="160dp"
        android:contentDescription="@string/talk"
        android:src="@drawable/ic_mic_24"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/record_clip"
        android:src="@drawable/ic_video_cam_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/take_snapshot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/take_snapshot"
        android:src="@drawable/ic_camera_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frameLayout"
            app:layout_constraintDimensionRatio="16:9"
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <org.videolan.libvlc.util.VLCVideoLayout
                android:id="@+id/vlc_video_Layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <View
                android:id="@+id/privacy_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/loading_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/reconnect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reconnect" />

            <Button
                android:id="@+id/exit_privacy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/exit_privacy_mode" />

        </FrameLayout>

        <RelativeLayout
            android:id="@+id/ptz_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ptz_home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/ptz_recenter"
                android:src="@drawable/ic_home_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ptz_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ptz_home_button"
                android:layout_centerHorizontal="true"
                android:layout_margin="25dp"
                android:contentDescription="@string/ptz_move_up"
                android:src="@drawable/ic_chevron_up_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ptz_down_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ptz_home_button"
                android:layout_centerHorizontal="true"
                android:layout_margin="25dp"
                android:contentDescription="@string/ptz_move_down"
                android:src="@drawable/ic_chevron_down_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ptz_left_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="25dp"
                android:layout_toLeftOf="@+id/ptz_home_button"
                android:contentDescription="@string/ptz_move_left"
                android:src="@drawable/ic_chevron_left_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ptz_right_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="25dp"
                android:layout_toRightOf="@+id/ptz_home_button"
                android:contentDescription="@string/ptz_move_right"
                android:src="@drawable/ic_chevron_right_24" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/talk_controls"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <!-- Header: title + close, right below the video. -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/talk_title"
                    android:textAppearance="?attr/textAppearanceTitleMedium" />

                <ImageButton
                    android:id="@+id/talk_close_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/talk_close"
                    android:src="@drawable/ic_close_24" />

            </LinearLayout>

            <!-- Controls, centered in the space left below the header. -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/talk_mic_volume"
                        android:src="@drawable/ic_mic_24" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/mic_volume"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/talk_mic_volume"
                        android:value="50"
                        android:valueFrom="0"
                        android:valueTo="100" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/talk_camera_volume"
                        android:src="@drawable/ic_volume_24" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/camera_volume"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/talk_camera_volume"
                        android:value="100"
                        android:valueFrom="0"
                        android:valueTo="100" />

                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/push_to_talk_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/talk"
                    android:enabled="false"
                    android:src="@drawable/ic_mic_24"
                    app:fabCustomSize="96dp"
                    app:maxImageSize="40dp"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Eneverre.Fab.Circle" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>