<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/eneverre_icon"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:drawablePadding="4dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_title"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/image"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_message"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/editNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="12"
        android:inputType="textPassword"
        android:autofillHints="newPassword"
        android:hint="@string/new_password_hint"
        android:drawableStart="@drawable/ic_lock_24"
        android:drawablePadding="4dp"/>

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editNewPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="12"
        android:inputType="textPassword"
        android:autofillHints="newPassword"
        android:hint="@string/confirm_password_hint"
        android:drawableStart="@drawable/ic_lock_24"
        android:drawablePadding="4dp"/>

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editConfirmPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:backgroundTint="@color/ic_launcher_background"
        android:text="@string/change_password_button"/>

    <ProgressBar
        android:id="@+id/changePasswordProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonChangePassword"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
